--- a/plugins/lib-sm/plugin.xml
+++ b/plugins/lib-sm/plugin.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <plugin
         id="lib-sm"
         name="Social media Framework"
@@ -51,49 +50,49 @@
         <library name="cglib-nodep-2.1_3.jar">
             <export name="*"/>
         </library>
-        <library name="commons-codec-1.4.jar">
+        <library name="commons-codec-1.10.jar">
             <export name="*"/>
         </library>
         <library name="commons-collections-3.2.1.jar">
             <export name="*"/>
         </library>
-        <library name="commons-exec-1.3.jar">
+        <library name="commons-exec-1.1.jar">
             <export name="*"/>
         </library>
         <library name="commons-io-2.4.jar">
             <export name="*"/>
         </library>
-        <library name="commons-lang3-3.4.jar">
+        <library name="commons-lang3-3.3.2.jar">
             <export name="*"/>
         </library>
-        <library name="commons-logging-1.1.1.jar">
+        <library name="commons-logging-1.2.jar">
             <export name="*"/>
         </library>
-        <library name="cssparser-0.9.16.jar">
+        <library name="cssparser-0.9.14.jar">
             <export name="*"/>
         </library>
         <library name="guava-18.0.jar">
             <export name="*"/>
         </library>
-        <library name="htmlunit-2.18.jar">
+        <library name="htmlunit-2.15.jar">
             <export name="*"/>
         </library>
-        <library name="htmlunit-core-js-2.17.jar">
+        <library name="htmlunit-core-js-2.15.jar">
             <export name="*"/>
         </library>
-        <library name="httpmime-4.5.jar">
+        <library name="httpmime-4.3.3.jar">
             <export name="*"/>
         </library>
-        <library name="jetty-io-9.2.12.v20150709.jar">
+        <library name="jetty-io-8.1.15.v20140411.jar">
             <export name="*"/>
         </library>
-        <library name="jetty-util-9.2.12.v20150709.jar">
+        <library name="jetty-util-8.1.15.v20140411.jar">
             <export name="*"/>
         </library>
-        <library name="jna-4.1.0.jar">
+        <library name="jna-3.4.0.jar">
             <export name="*"/>
         </library>
-        <library name="nekohtml-1.9.22.jar">
+        <library name="nekohtml-1.9.21.jar">
             <export name="*"/>
         </library>
         <library name="netty-3.5.2.Final.jar">
@@ -105,46 +104,49 @@
         <library name="sac-1.3.jar">
             <export name="*"/>
         </library>
-        <library name="selenium-api-2.52.0.jar">
+        <library name="selenium-api-2.44.0.jar">
             <export name="*"/>
         </library>
-        <library name="selenium-chrome-driver-2.52.0.jar">
+        <library name="selenium-chrome-driver-2.44.0.jar">
             <export name="*"/>
         </library>
-        <library name="selenium-firefox-driver-2.52.0.jar">
+        <library name="selenium-firefox-driver-2.44.0.jar">
             <export name="*"/>
         </library>
-        <library name="selenium-htmlunit-driver-2.52.0.jar">
+        <library name="selenium-htmlunit-driver-2.44.0.jar">
             <export name="*"/>
         </library>
-        <library name="selenium-ie-driver-2.52.0.jar">
+        <library name="selenium-ie-driver-2.44.0.jar">
             <export name="*"/>
         </library>
-        <library name="selenium-java-2.52.0.jar">
+        <library name="selenium-java-2.44.0.jar">
             <export name="*"/>
         </library>
-        <library name="selenium-remote-driver-2.52.0.jar">
+        <library name="selenium-remote-driver-2.44.0.jar">
             <export name="*"/>
         </library>
-        <library name="selenium-safari-driver-2.52.0.jar">
+        <library name="selenium-safari-driver-2.44.0.jar">
             <export name="*"/>
         </library>
-        <library name="selenium-support-2.52.0.jar">
+        <library name="selenium-support-2.44.0.jar">
             <export name="*"/>
         </library>
-        <library name="serializer-2.7.2.jar">
+        <library name="serializer-2.7.1.jar">
             <export name="*"/>
         </library>
         <library name="webbit-0.4.14.jar">
             <export name="*"/>
         </library>
-        <library name="xalan-2.7.2.jar">
+        <library name="xalan-2.7.1.jar">
             <export name="*"/>
         </library>
         <library name="xercesImpl-2.9.1.jar">
             <export name="*"/>
         </library>
         <library name="xml-apis-1.4.01.jar">
+            <export name="*"/>
+        </library>
+        <library name="phantomjsdriver-1.2.1.jar">
             <export name="*"/>
         </library>
     </runtime>
